<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.Register">
    <TextView
        android:id="@+id/textEnterProfileDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/profileDetail"
        android:textSize="17sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editFirstName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:inputType="number"
        android:hint="@string/fname"
        android:layout_below="@id/textEnterProfileDetail">
    <com.google.android.material.textfield.TextInputEditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editLastName"
        android:layout_height="wrap_content"
        android:layout_width="180dp"
        android:layout_below="@id/textEnterProfileDetail"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="number"
        android:layout_toEndOf="@id/editFirstName"
        android:layout_toRightOf="@id/editFirstName"
        android:hint="@string/lname">
    <com.google.android.material.textfield.TextInputEditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/sGender"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginStart="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:layout_below="@id/editFirstName"
        android:layout_marginLeft="20dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/spinnerGender"
        android:layout_margin="15dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="textEmailAddress"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editMobileNumber"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/editEmail"
        android:layout_margin="15dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="textEmailAddress"
        android:hint="@string/enterMobileNumber">
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:id="@+id/relativeSelectLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_below="@id/editMobileNumber">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_location_24"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sAddress"
            android:gravity="center_horizontal"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#fff"/>

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editDescription"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/relativeSelectLocation"
        android:layout_margin="15dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="textEmailAddress"
        android:hint="@string/Description">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#ff0000"
        android:text="Register"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/editDescription"/>
</RelativeLayout>
</ScrollView>